@@ -50,7 +50,7 @@ namespace Mono.Unix {
 		}
 
 		// maximum number of bytes read from the symbolic link
-		public static readonly int ContentsLength = 1024;
+		public static readonly int MaxContentsSize = 1024;
 
 		public UnixFileSystemInfo Contents {
 			get {
@@ -108,11 +108,11 @@ namespace Mono.Unix {
 		{
 			// Who came up with readlink(2)?  There doesn't seem to be a way to
 			// properly handle it.
-			StringBuilder sb = new StringBuilder (ContentsLength+1);
-			int r = Syscall.readlink (FullPath, sb, (ulong) ContentsLength);
+			StringBuilder sb = new StringBuilder (MaxContentsSize+1);
+			int r = Syscall.readlink (FullPath, sb, (ulong) MaxContentsSize);
 			if (r == -1)
 				return null;
-			return sb.ToString().Substring (0, r);
+			return sb.ToString(0, r);
 		}
 	}
 }
